--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@
   --text-color: #666;
   --text-color-light: #8bf;
   --border-color: #eee;
-  --bg-color: #f4f4f4;
+  --bg-color: #eee;
   --neutral-color: #fff;
 }
 
@@ -39,13 +39,14 @@
 }
 
 body {
-    font-family: 'Open Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
-    font-size: 1em;
-    font-weight: 300;
-    line-height: 1.5;
-    color: var(--text-color);
-    background: var(--bg-color);
-    position: relative;
+  font-family: 'Open Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+  font-size: 1em;
+  font-weight: 300;
+  line-height: 1.5;
+  color: var(--text-color);
+  background: var(--bg-color);
+  position: relative;
+  background-image: linear-gradient(0deg, #ff4b53 0%, var(--main-color) 95%);
 }
 
 header {
@@ -130,6 +131,24 @@ b {
   text-transform: uppercase;
 }
 
+.forecast-card .weather-data {
+  position: relative;
+  border-right: 1px solid var(--border-color);
+  overflow: hidden;
+  cursor: pointer;
+  background: var(--neutral-color);
+  transition: 0.25s ease-out;
+}
+
+.forecast-card .weather-data:hover {
+  background: var(--bg-color);
+  transition: 0.5s ease-out;
+}
+
+.forecast-card .weather-data .row {
+  border-bottom: 1px solid var(--border-color);
+}
+
 .forecast-card .weather-data .wi {
   padding-right: .75em;
   font-size: 1.05em;
@@ -138,7 +157,7 @@ b {
 .forecast-card .desc {
   text-transform: uppercase;
   font-weight: 700;
-  color: var(--text-color-light);
+  color: var(--main-color);
   font-size: 80%;
   padding: 1.5em 0;
   border-bottom: 1px solid var(--border-color);
@@ -171,7 +190,7 @@ b {
   .forecast-card .desc {
     text-transform: uppercase;
     font-weight: 700;
-    color: var(--text-color-light);
+    color: var(--main-color);
     font-size: 50%;
     padding: 1.5em 0;
     border-bottom: 1px solid var(--border-color);
